[gd_scene load_steps=25 format=3 uid="uid://damevxburygte"]

[ext_resource type="Texture2D" uid="uid://d11v02fw7ijdi" path="res://Sprites/Characters/Walk-sheet.png" id="1_iqltk"]
[ext_resource type="Script" path="res://Scripts/Chef.gd" id="1_mjivd"]
[ext_resource type="Texture2D" uid="uid://dpjaxr3xgrukd" path="res://Sprites/Characters/Chef_paws.png" id="2_x75vi"]
[ext_resource type="Texture2D" uid="uid://b83qtvmq8pbhi" path="res://Sprites/Cafe/Items/CoffeeMug.png" id="4_dq5p5"]
[ext_resource type="Material" uid="uid://dhuaoiv88k3qj" path="res://Shader/Outline.tres" id="4_twj0o"]
[ext_resource type="Texture2D" uid="uid://bprybq0fqviap" path="res://Sprites/Cafe/Items/CoffeeMugFull.png" id="5_efiwc"]
[ext_resource type="Texture2D" uid="uid://bejdeiio67hjx" path="res://Sprites/Cafe/Items/Muffin_1.png" id="5_vc4x3"]
[ext_resource type="Texture2D" uid="uid://bb7ax3421dt18" path="res://Sprites/Cafe/Items/Muffin_2.png" id="7_cn458"]
[ext_resource type="Texture2D" uid="uid://b0rfe0rojemk1" path="res://Sprites/Cafe/Items/GreenTea.png" id="7_g0fmd"]
[ext_resource type="Texture2D" uid="uid://bpsqq1b7lnu3r" path="res://Sprites/Cafe/Items/Money.png" id="10_p33tw"]

[sub_resource type="Animation" id="Animation_pbagi"]
resource_name = "ItemFloat"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(2, 2, 2),
"update": 0,
"values": [Vector2(0, -10), Vector2(0, 10), Vector2(0, -10)]
}

[sub_resource type="Animation" id="Animation_388fx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_orgf7"]
_data = {
"ItemFloat": SubResource("Animation_pbagi"),
"RESET": SubResource("Animation_388fx")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_md1jd"]
atlas = ExtResource("1_iqltk")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5lji"]
atlas = ExtResource("1_iqltk")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulwn8"]
atlas = ExtResource("1_iqltk")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_la14w"]
atlas = ExtResource("1_iqltk")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_qx7vp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_md1jd")
}],
"loop": true,
"name": &"Ide",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5lji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulwn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_la14w")
}],
"loop": true,
"name": &"Walk",
"speed": 15.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Curve" id="Curve_d7ht7"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_kqv7g"]
curve = SubResource("Curve_d7ht7")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_k0avc"]
lifetime_randomness = 0.17
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
direction = Vector3(0, 15, 5)
gravity = Vector3(0, -100, 0)
linear_accel_max = 19.11
radial_accel_min = 16.56
radial_accel_max = 54.78
radial_accel_curve = SubResource("CurveTexture_kqv7g")
tangential_accel_min = -86.62
tangential_accel_max = 22.93
scale_min = 0.2
scale_max = 0.2

[sub_resource type="Gradient" id="Gradient_iu62y"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.737255, 0.745098, 0.737255, 0.243137)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_eip6w"]
gradient = SubResource("Gradient_iu62y")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hsutk"]
size = Vector2(140, 168)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_mjivd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Items/Muffin1")
libraries = {
"": SubResource("AnimationLibrary_orgf7")
}
autoplay = "ItemFloat"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(14, 14)
sprite_frames = SubResource("SpriteFrames_qx7vp")
animation = &"Walk"

[node name="PawsUP" type="Sprite2D" parent="."]
visible = false
scale = Vector2(14, 14)
texture = ExtResource("2_x75vi")

[node name="PawsDown" type="Sprite2D" parent="."]
position = Vector2(0, 128)
scale = Vector2(14, 14)
texture = ExtResource("2_x75vi")

[node name="Items" type="Node2D" parent="."]
z_index = 2

[node name="CoffeeMugEmpty" type="Sprite2D" parent="Items"]
visible = false
material = ExtResource("4_twj0o")
position = Vector2(22, -129)
scale = Vector2(14, 14)
texture = ExtResource("4_dq5p5")

[node name="CoffeeMugFull" type="Sprite2D" parent="Items"]
visible = false
material = ExtResource("4_twj0o")
position = Vector2(22, -129)
scale = Vector2(14, 14)
texture = ExtResource("5_efiwc")

[node name="GPUParticles2D" type="GPUParticles2D" parent="Items/CoffeeMugFull"]
visible = false
position = Vector2(-0.5, -4.33929)
process_material = SubResource("ParticleProcessMaterial_k0avc")
texture = SubResource("GradientTexture2D_eip6w")
preprocess = 50.3
speed_scale = 0.8
explosiveness = 0.24

[node name="GreenTeaFull" type="Sprite2D" parent="Items"]
visible = false
material = ExtResource("4_twj0o")
position = Vector2(22, -129)
scale = Vector2(14, 14)
texture = ExtResource("7_g0fmd")

[node name="GPUParticles2D" type="GPUParticles2D" parent="Items/GreenTeaFull"]
position = Vector2(-0.5, -3.91071)
process_material = SubResource("ParticleProcessMaterial_k0avc")
texture = SubResource("GradientTexture2D_eip6w")
preprocess = 50.3
speed_scale = 0.8
explosiveness = 0.24

[node name="Muffin1" type="Sprite2D" parent="Items"]
visible = false
material = ExtResource("4_twj0o")
position = Vector2(15, -130)
scale = Vector2(14, 14)
texture = ExtResource("5_vc4x3")

[node name="Muffin2" type="Sprite2D" parent="Items"]
visible = false
material = ExtResource("4_twj0o")
position = Vector2(15, -130)
scale = Vector2(14, 14)
texture = ExtResource("7_cn458")

[node name="Muffin1Cooked" type="Sprite2D" parent="Items"]
visible = false
material = ExtResource("4_twj0o")
position = Vector2(15, -130)
scale = Vector2(14, 14)
texture = ExtResource("5_vc4x3")

[node name="GPUParticles2D" type="GPUParticles2D" parent="Items/Muffin1Cooked"]
position = Vector2(-0.5, -4.33929)
process_material = SubResource("ParticleProcessMaterial_k0avc")
texture = SubResource("GradientTexture2D_eip6w")
preprocess = 50.3
speed_scale = 0.8
explosiveness = 0.18

[node name="Muffin2Cooked" type="Sprite2D" parent="Items"]
visible = false
material = ExtResource("4_twj0o")
position = Vector2(15, -130)
scale = Vector2(14, 14)
texture = ExtResource("7_cn458")

[node name="GPUParticles2D" type="GPUParticles2D" parent="Items/Muffin2Cooked"]
position = Vector2(-0.5, -4.33929)
process_material = SubResource("ParticleProcessMaterial_k0avc")
texture = SubResource("GradientTexture2D_eip6w")
preprocess = 50.3
speed_scale = 0.8
explosiveness = 0.24

[node name="Money" type="Sprite2D" parent="Items"]
visible = false
material = ExtResource("4_twj0o")
position = Vector2(15, -130)
scale = Vector2(14, 14)
texture = ExtResource("10_p33tw")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(15, -112)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_hsutk")
